# zmk-config-matchasplit

./: build.yaml
boards/shields/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  matchasplit.dtsi  matchasplit.zmk.yml  matchasplit_left.overlay  matchasplit_right.overlay
boards/shields/matchasplit/: CMakeLists.txt  Kconfig.defconfig  matchasplit.dtsi  matchasplit_left.overlay  matchasplit_right.overlay
config/: keys_no.h  matchasplit.conf  matchasplit.keymap  west.yml
config/boards/shields/matchasplit/: CMakeLists.txt  matchasplit.dtsi  matchasplit_right.overlay
